adding in functionality for alt+linknum which clicks on link on page

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,7 +14,8 @@
       ],
       "js": [
         "inj.js"
-      ]
+      ],      
+      "css" : ["inj.css"]
     }
   ],
   "content_security_policy": "script-src 'self'; object-src 'self'"
